Don't expand extra widgets

https://bugzilla.gnome.org/show_bug.cgi?id=698656